apps/sonarr/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
    beaver-cloud.xyz/nas-media: 'true'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.16@sha256:22651c750eedb091f6d76ade95dbecae0eeafe2b55432c3b8d8b042e8745f344
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          volumeMounts:
            - name: volume
              mountPath: /config
          ports:
            - name: http
              containerPort: 8989

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
