apps/sonarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.19@sha256:47d56de90c81eb2a8f0d36771328a95e7299609579b88db82b1473c314f26a47
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: volume
              mountPath: /config
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          ports:
            - name: http
              containerPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [sonarr]
